--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.28.1",
+    "@gsap/react": "^2.1.1",
+    "@headlessui/react": "^2.0.4",
     "@hello-pangea/dnd": "^16.5.0",
     "@hookform/resolvers": "^3.3.2",
     "@mux/mux-node": "^7.3.3",
@@ -31,6 +33,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.298.0",
     "next": "14.0.4",
     "query-string": "^8.1.0",
@@ -42,7 +45,9 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-quill": "^2.0.0",
+    "react-slick": "^0.30.2",
     "recharts": "^2.10.3",
+    "slick-carousel": "^1.8.1",
     "stripe": "^14.10.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
@@ -54,6 +59,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
